# movie-data

./: .gitignore  readme.md  requirements.txt
fast_project/: .dockerignore  Dockerfile  pyproject.toml  requirements-docker.txt  requirements-local-sqlite.txt
fast_project/app/: crud.py  database.py  main.py  models.py  schemas.py
fast_project/sql_app/: crud.py  database.py  main.py  models.py  schemas.py
mddocs/: assignment-results.md  assignment-status.md  original-assignment.md  todo.md
references/fast-api-sample/: main.py
