[tool.poetry]
name = "movie-data"
version = "0.1.0"
description = "Simple API for movie data."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.1"
SQLAlchemy = "^1.4.40"
fastapi-filter = {extras = ["all"], version = "^0.1.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
