[tool.poetry]
name = "movie-data"
version = "0.1.0"
description = "Simple API for movie data."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.1"
SQLAlchemy = "^1.4.40"
fastapi-filter = {extras = ["all"], version = "^0.1.1"}
uvicorn = {extras = ["standard"], version = "^0.18.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cloud-sql-python-connector = {extras = ["pg8000"], version = "^0.8.0"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
